--- a/CreatorApp/CreatorApp.vcxproj
+++ b/CreatorApp/CreatorApp.vcxproj
@@ -152,6 +152,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="mian.cpp" />
+    <ClCompile Include="test.cpp" />
+    <ClCompile Include="testCamera.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test.h" />
+    <ClInclude Include="testCamera.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
