--- a/CreatorApp/CreatorApp.vcxproj
+++ b/CreatorApp/CreatorApp.vcxproj
@@ -157,7 +157,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="mian.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="testCamera.cpp" />
   </ItemGroup>
